--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3347,7 +3347,8 @@ nav {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%); } }
+        transform: translate(-50%, -50%);
+        font-size: 35px; } }
     @media (max-width: 450px) {
       .slick-container .slide-text h1.home-text-01 {
         font-size: 30px; } }
