--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -143,7 +143,8 @@ nav {
         font-weight: 600;
       }
       @media (max-width: 766px){
-        @include center-test(50%)
+        @include center-test(50%);
+        font-size: 35px;
       }
       @media (max-width: 450px){
         font-size: 30px;
