--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -24,7 +24,7 @@ nav {
       font-size:15px;
     }
     @media  (min-width: 768px) {
-      padding:30px 2px 25px 2px !important;
+      padding:29px 2px 24px 2px !important;
     }
   }
   .brand{
@@ -68,7 +68,7 @@ nav {
         color: #fff;
       }
       &:hover{
-        background-color: unset;
+        opacity: 0.5;
       }
       &:focus{
         background-color: unset;
@@ -104,7 +104,7 @@ nav {
     //transform: translateX(-50%);
     width: auto;
     height: fit-content;
-    top: 51%;
+    top: 50.8%;
     @include css3-prefix('transform', 'translate(-50%, -50%)');
     li {
       display: block;
@@ -134,7 +134,7 @@ nav {
 
     h1.home-text-01 {
       width: 90%;
-      @include center-test(61.6%);
+      @include center-test(61%);
       color: #fff;
       //font-size:calc(38px + 1.5vw);
       font-size: 3.875em;
@@ -153,7 +153,7 @@ nav {
     }
     h2{
       &.home-text-02 {
-      @include center-test(69.6%);
+      @include center-test(69.1%);
       width: 90%;
       //font-size:calc(20px + 1.5vw);
       font-size: 3em;
@@ -177,7 +177,7 @@ nav {
         color: $color-header;
       }
         &.text-03 {
-        @include center-test(77.1%);
+        @include center-test(76.2%);
         //font-size:calc(5px + 1.2vw);
           font-size: 1.125em;
         @media (max-width: 1024px){
@@ -195,39 +195,17 @@ nav {
           }
       }
     }
-      &.no-background {
-        position: relative;
-        overflow: hidden;
 
-        span {
-          display: inline-block;
-          vertical-align: baseline;
-          zoom: 1;
-          *display: inline;
-          *vertical-align: auto;
-          position: relative;
-          padding: 0 32px;
-
-          &:before, &:after {
-            content: '';
-            display: block;
-            width: 6%;
-            position: absolute;
-            top: 53%;
-            border-top: 2px solid $color-header;
-          }
-
-          &:before { right: 100% ;}
-          &:after { left: 100%; }
-        }
-      }
 
     }
   }
 }
 #home{
   & .social{
-    @include center-test(93.3%);
+    @include center-test(92.7%);
+    @media (min-width: 1080px){
+      font-size: 18px;
+    }
     font-size:calc(5px + 0.7vw);
     font-weight: 300;
     list-style-type: none;
@@ -235,7 +213,7 @@ nav {
       display: inline;
       a {
         outline:0;
-        padding: 10px;
+        padding: 5px;
         &:link {
           color: rgba(255,255,255,0.5);
         }
@@ -262,7 +240,7 @@ nav {
   @media (max-width:768px) {
     background-color: rgba(10,31,35, 1);
   }
-  background-color: rgba(10,31,35, 0.5);
+  background-color: rgba(10,31,35, 1);
   border: 0;
   font-size: 16px;
 }
@@ -275,3 +253,29 @@ nav {
   transform: rotate(-45deg);
 }
 
+h2.no-background {
+  position: relative;
+  overflow: hidden;
+
+  span {
+    display: inline-block;
+    vertical-align: baseline;
+    zoom: 1;
+    *display: inline;
+    *vertical-align: auto;
+    position: relative;
+    padding: 0 35px;
+
+    &:before, &:after {
+      content: '';
+      display: block;
+      width: 9.2%;
+      position: absolute;
+      top: 53%;
+      border-top: 2px solid $color-header;
+    }
+
+    &:before { right: 100% ;}
+    &:after { left: 100%; }
+  }
+}
