--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -10,8 +10,8 @@
     ul.slick-dots {
       position: relative;
       left: 51%;
-      margin-top: 58px;
-      margin-bottom: 38px;
+      margin-top: 56px;
+      margin-bottom: 35px;
       @media only screen and (max-width: 991px) {
           left: 51%;
           margin-top: 0;
@@ -83,8 +83,18 @@
     border: 1px solid #fff;
     border-radius: 50%;
     box-sizing: content-box;
+    width: 2.5rem!important;
+    height: 2.5rem !important;
   }
   // todo cam giac doan style nay khong can dung toi luon, xoa het layout van nhu bt???
+  .icon-test{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    line-height: 0;
+    width: 100%;
+    height: inherit;
+  }
   .btn{
     // todo sao font family o day bi lap lai qua vay? font chi khai bao 1 lan tru nhung font dat biet o title chang han thoi
     font-weight: 700;
@@ -125,7 +135,7 @@
   }
   ul.slick-dots{
     margin-top: 68px;
-    margin-bottom: 34px;
+    margin-bottom: 28px;
   }
 }
 
@@ -167,6 +177,8 @@ h4.background {
   text-transform: uppercase;
   opacity: 0.7;
   color: #c3c6c7;
+  width: 70%;
+  margin: auto;
   #fun &{
     color: #fff;
     opacity: 1;
@@ -177,8 +189,8 @@ h4.background {
     content:"";
     position: absolute;
     top: 50%;
-    left: 0;
-    width: 43.5%;
+    left: 6%;
+    width: 35%;
     z-index: -1;
   }
 
@@ -187,8 +199,8 @@ h4.background {
     content:"";
     position: absolute;
     top: 50%;
-    right: 0;
-    width: 43.5%;
+    right: 6%;
+    width: 35%;
     z-index: -1;
   }
 }
@@ -370,7 +382,7 @@ p{
   &.title{
     #feature &{
       margin-top: 0;
-      padding-top: 72px;
+      padding-top: 71px;
     }
     #team &{
       margin-top: 0;
@@ -379,22 +391,30 @@ p{
     margin-top: 94px;
   }
   &.heart{
-    margin-top: 17px;
-
+    margin-top: 16px;
+    #works &{
+      margin-top: 17px
+    }
+  }
+  &.highlight{
+    margin-top:30px;
+  }
+  #fun &{
+    margin-top:20px;
   }
   &.content {
     margin-top: 52px;
+    #feature &{
+      margin-top: 60px;
+    }
     #team & {
       margin-top: 105px;
-    }
-    #contact &{
-      margin-top: 80px;
     }
     #works &{
       margin-top: 40px
     }
     #contact &{
-      margin-top: 68px;
+      margin-top: 70px;
     }
   }
   .container-fluid & {
@@ -409,7 +429,7 @@ p{
 }
 #contact{
   .container-fluid{
-    margin-top: 80px;
+    margin-top: 90px;
     padding:0;
   }
   h4.location{
@@ -420,7 +440,7 @@ p{
     margin-bottom:32px;
   }
   h6.location {
-    margin-top: 40px;
+    margin-top: 35px;
     color: rgba(6, 32, 51,0.6);
     line-height: 20pt;
   }
@@ -562,14 +582,14 @@ p{
   .text-center{
     color: #fff;
     h1{
-      margin-top: 33px;
+      margin-top: 40px;
       font-weight: 600;
       @media (min-width: 1048px ){
         font-size: 60px;
       }
     }
     h4{
-      margin-top: 3px;
+      margin-top: 7px;
       text-transform: uppercase;
     }
   }
@@ -616,8 +636,6 @@ p{
     padding:0 !important;
   }
 }
-
-
 
 
 
